# peek

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md  monitor.md  video.md
examples/data-visualization/: dv.clothes.excel.py
examples/middleware/: config.yaml  main.py
examples/opentelemetry/: config.yaml  main.py
examples/webserver/: config.yaml  main.py
peek/: __init__.py
peek/ai/gpu/: data_parallel.py
peek/ai/tools/: model_to_onnx.py
peek/cv/image/: image.py
peek/cv/torch/: convert_onnx.py  device.py  inference.py  model.py  transform.py
peek/encoding/base64/: base64.py
peek/git/: git_info.py
peek/net/: http.py  ip.py
peek/os/: file.py
peek/time/: func_duration_controller.py
peek/uuid/: uuid.py
pkg/data-visualization/: dv.clothes.excel.ipynb  dv.clothes.excel.py
pkg/data-visualization/testdata/: clothes.xlsx
pkg/http/: http_server.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: format.sh  lint.sh  syntax_check.sh  test.sh
src/peek/: __init__.py  __version__.py
src/peek.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/peek/ai/: __init__.py
src/peek/ai/image/: __init__.py  utils.py
src/peek/ai/vllm/: __init__.py  client.py  logprobs.py  types.py  video_client.py
src/peek/algorithm/: __init__.py
src/peek/algorithm/learning/: __init__.py  bkt.py  sm2.py
src/peek/app/: __init__.py  application.py  command.py  hooks.py  plugin.py  provider.py
src/peek/config/: __init__.py  loader.py  schema.py  watcher.py
src/peek/context/: __init__.py  cancel.py  context.py  task_registry.py
src/peek/cv/image/: image.py
src/peek/cv/torch/: convert_onnx.py  device.py  model.py  transform.py
src/peek/cv/video/: __init__.py  clip.py  info.py  resize.py  video_decoder.py
src/peek/database/: __init__.py
src/peek/database/mysql/: __init__.py  config.py  engine.py  mysql.py  repository.py  session.py
src/peek/database/redis/: __init__.py  client.py  config.py  redis.py
src/peek/encoding/base64/: base64.py
src/peek/errors/: __init__.py  errors.py  handler.py
src/peek/git/: git_info.py
src/peek/logs/: __init__.py  config.py  formatter.py  rotate.py
src/peek/net/: __init__.py  http.py  ip.py
src/peek/net/grpc/: __init__.py  config.py  example.py  gateway.py  interceptor.py  server.py
src/peek/net/webserver/: __init__.py  config.py  example.py  factory.py  healthz.py  hooks.py  server.py  sse.py
src/peek/opentelemetry/: __init__.py  config.py  service.py
src/peek/opentelemetry/metric/: __init__.py  meter.py
src/peek/opentelemetry/resource/: __init__.py  resource.py
src/peek/opentelemetry/tracer/: __init__.py  tracer.py
src/peek/os/: __init__.py  file.py
src/peek/os/monitor/: __init__.py  collector.py  service.py  visualizer.py
src/peek/plugins/: __init__.py  base_options.py  logs.py  monitor.py  mysql.py  otel.py  redis.py  vllm.py
src/peek/plugins/celery/: __init__.py  (+3 more)
src/peek/time/: __init__.py  backoff.py  func_duration_controller.py  parse.py  wait.py
src/peek/uuid/: uuid.py
src/peek/validation/: __init__.py  decorators.py  grpc_interceptor.py  rules.py  validator.py
tests/: conftest.py  test.py  test_asyncio.py  test_git_info.py  test_http.py  test_image_resize.py  test_net.py  test_os.py  test_torch_device.py  test_torch_inference.py  test_torch_model.py  test_torch_transform.py
tests/algorithm/learning/: test_bkt.py  test_sm2.py
tests/integration/: test_video_real.py
tests/testdata/: output_dump.json
tests/unit/: test.py  test_asyncio.py  test_backoff.py  test_base64.py  test_config.py  test_context.py  test_errors.py  test_git_info.py  test_http.py  test_image_resize.py  test_logs.py  test_net.py  test_os.py  test_torch_device.py  test_torch_inference.py  test_torch_model.py  test_torch_transform.py  test_validation.py  test_video_clip.py  test_video_decoder.py  test_video_facade.py  test_video_filter.py  test_video_info.py  test_video_resize.py  test_wait.py
tools/: process_monitor.py  pt2onnx.py
(+51 files in other folders)
